# Tech-Challenge-FIAP-FASE4

./: .env.example  .gitignore  LICENSE  README.md  dir-antes.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: fusion.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specs/features/fusao-multimodal/: design.md  spec.md  tasks.md
.specs/superpowers/specs/: 2026-07-18-multimodal-fusion-design.md
adapters/: base.py
adapters/audio/: adapter.py
adapters/clinical/: adapter.py
adapters/video/: adapter.py
audio/: audio_acoustics.py  audio_azure.py  audio_cli.py  audio_pipeline.py  audio_schemas.py  audio_scoring.py  audio_storage.py
data/audio/processed/: RES0001_patient_only_20260724T032525000451Z_transcription.json  RES0001_patient_only_20260724T032525001204Z_processed.json
data/audio/reports/: RES0001_patient_only_20260724T032525001647Z_alert.json
docs/: DETALHAMENTO DO TECH_CHALENGE.txt  ESCOLHA DO DATASET DE AUDIO.md  execucao_audio_elber.md  plano-implementacao.md  progress.md
docs/superpowers/plans/: 2026-07-18-fusao-multimodal.md  2026-07-19-adapter-clinico-leave-one-out.md
docs/superpowers/specs/: 2026-07-19-adapter-clinico-leave-one-out.md
eicu-anomaly-detection/data/processed/: vital_features.csv
eicu-anomaly-detection/models/: clinical_anomaly_detector.joblib
eicu-anomaly-detection/outputs/: alerts.csv  alerts.json  predictions.csv
eicu-anomaly-detection/src/: alert_generator.py  anomaly_detector.py  config.py  data_loader.py  feature_builder.py  train.py
eicu_anomaly_detection/: anomaly_detector.py  config.py  data_loader.py  test_output.py  train.py
fusion/: io.py
fusion/adapters/: base.py
fusion/adapters/audio/: adapter.py
fusion/adapters/clinical/: adapter.py
fusion/adapters/video/: adapter.py
fusion/core/: fusion.py  schema.py
modulo_video/: README.md  avaliar.py  biomechanics.py  calibrar.py  colab_modulo_video.ipynb  comparar_video.py  main.py  pose_extractor.py
modulo_video/src/: anomaly_detector.py  object_detector.py  pipeline.py  risk_scoring.py
notebooks/: TechChallenge_Colab_Completo.ipynb
scripts/: ler_pdf.py  prepare_audio_sample.sh
specs/001-audio-texto-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-audio-texto-pipeline/checklists/: requirements.md  (+1 more)
src/: __init__.py  fusion.py
src/audio/: audio_acoustics.py  audio_azure.py  audio_cli.py  audio_pipeline.py  audio_schemas.py  audio_scoring.py  audio_storage.py
tests/: test_e2e_mock.py
tests/audio/: __init__.py  conftest.py  teste_azure.py  teste_azure2.py
tests/fixtures/: final_multimodal_report_e2e.json  generate_fixtures.py
tests/fusion/: test_adapters.py  test_fusion_core.py  test_schema.py
(+16 files in other folders)
